[package]
name = "guuid"
version = "1.0.0"
edition = "2018"
authors = ["GOSCPS <goscps@foxmail.com>","MingMoe <me@kawayi.moe>"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
rand = {version = "0.8",features = ["std","getrandom","std_rng"],optional = true}
base32 = {version = "0.4",optional = true}

[features]
no_std = []
alloc = ["base32"]
std = ["rand","base32"]